# plane-old-weather

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
deploy/: cloudflare-pages.md
docs/: ARCHITECTURE.md
model/: CLAUDE.md  pyproject.toml  requirements-optional.txt  requirements.txt  run.py  scenarios.py
model/boundary/: __init__.py  dome.py  ice_wall.py
model/forcing/: __init__.py  spotlight_sun.py
model/reference/: __init__.py  era5_reproject.py
model/render/: __init__.py  colormaps.py  fields.py  manifest.py  pipeline.py  to_grid.py  to_png.py
model/solver/: __init__.py  dynamics.py  grid.py  integrate.py  operators.py  state.py  thermodynamics.py
model/tests/: test_boundary.py  test_forcing.py  test_pipeline.py  test_reference.py  test_render.py  test_scenarios.py  test_solver.py
web/: .prettierignore  CLAUDE.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  wrangler.toml
web/public/: _headers
web/public/assets/model/: .gitkeep  manifest.json
web/scripts/: og-fig4.py
web/src/: consts.ts  content.config.ts
web/src/components/: Hero.astro
web/src/components/DiscHero3D/: DiscHero3D.tsx  DiscScene.tsx  HeroFallback.tsx
web/src/components/ModelViewer/: ModelViewer.tsx  WindParticles.tsx
web/src/components/scrollytelling/: .gitkeep  BullseyeFigure.tsx  CycloneCompare.tsx  FalsificationChart.astro  (+5 more)
web/src/content/: .gitkeep
web/src/layouts/: BaseLayout.astro
web/src/lib/: hooks.ts  manifest.ts
web/src/pages/: index.astro
web/src/styles/: global.css  tokens.css
(+7 files in other folders)
